name:                microlens
version:             0.1.0.0
synopsis:            A tiny part of the 'lens' library which you can depend upon.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Data, Lenses
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Lens.Micro
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.4 && <5
                     , mtl >=2.0.1 && <2.3
  hs-source-dirs:      src
  default-language:    Haskell2010