name:                microlens-contra
version:             0.1.0.2
synopsis:            True folds and getters for microlens
description:
  This package provides @Fold@ and @Getter@ that are fully compatible with lens; the downside is that this package depends on contravariant, which in its turn depends on a lot of other packages (but still less than lens).
  .
  The difference between @Fold@ and @SimpleFold@ is that you can use e.g. @takingWhile@\/@droppingWhile@ and @backwards@ on the former but not on the latter. Most functions from lens that work with @Fold@ would work with @SimpleFold@ as well, though.
  .
  Starting from GHC 8.6, this package doesn't depend on contravariant anymore.
  .
  This package is a part of the <http://hackage.haskell.org/package/microlens microlens> family; see the readme <https://github.com/monadfix/microlens#readme on Github>.
license:             BSD3
license-file:        LICENSE
author:              Edward Kmett, Artyom Kazak
maintainer:          Monadfix <hi@monadfix.com>
homepage:            http://github.com/monadfix/microlens
bug-reports:         http://github.com/monadfix/microlens/issues
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC==7.4.2
                     GHC==7.6.3
                     GHC==7.8.4
                     GHC==7.10.3
                     GHC==8.0.2
                     GHC==8.2.2
                     GHC==8.4.4
                     GHC==8.6.5
                     GHC==8.8.1
                     GHC==8.10.1

source-repository head
  type:                git
  location:            git://github.com/monadfix/microlens.git

library
  exposed-modules:     Lens.Micro.Contra
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.5 && <5
                     , microlens >=0.4 && <0.5
  if impl(ghc < 8.6)
    build-depends:     contravariant >=1.3 && <2

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010
