cabal-version:       2.2
name:                microlens-generic
version:             0.4.13.1
synopsis:            A tiny lens library with no dependencies
license:             BSD-3-Clause
license-file:        LICENSE
author:              William Rusnack
homepage:            http://github.com/stevenfontanella/microlens
bug-reports:         http://github.com/stevenfontanella/microlens/issues
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/stevenfontanella/microlens.git

library
  exposed-modules:
    Lens.Micro.Generic
  build-depends:
      base >= 4.9 && < 5
    , microlens
  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    MultiParamTypeClasses
    StandaloneKindSignatures
    FlexibleInstances
    FlexibleContexts
    TypeOperators
    TypeFamilies
    ImportQualifiedPost
