name:                microlens-ghc
version:             0.4.14.0
synopsis:            microlens + array, bytestring, containers, transformers
description:
  Use this package instead of <http://hackage.haskell.org/package/microlens microlens> if you don't mind depending on all dependencies here – @Lens.Micro.GHC@ reexports everything from @Lens.Micro@ and additionally provides orphan instances of microlens classes for packages coming with GHC (<http://hackage.haskell.org/package/array array>, <http://hackage.haskell.org/package/bytestring bytestring>, <http://hackage.haskell.org/package/containers containers>, <http://hackage.haskell.org/package/transfromers transformers>).
  .
  The minor and major versions of microlens-ghc are incremented whenever the minor and major versions of microlens are incremented, so you can depend on the exact version of microlens-ghc without specifying the version of microlens you need.
  .
  This package is a part of the <http://hackage.haskell.org/package/microlens microlens> family; see the readme <https://github.com/monadfix/microlens#readme on Github>.
license:             BSD3
license-file:        LICENSE
author:              Edward Kmett, Artyom Kazak
maintainer:          Steven Fontanella <steven.fontanella@gmail.com>
homepage:            http://github.com/monadfix/microlens
bug-reports:         http://github.com/monadfix/microlens/issues
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC==7.6.3
                     GHC==7.8.4
                     GHC==7.10.3
                     GHC==8.0.2
                     GHC==8.2.2
                     GHC==8.4.4
                     GHC==8.6.5
                     GHC==8.8.4
                     GHC==8.10.7
                     GHC==9.0.1
                     GHC==9.2.1

source-repository head
  type:                git
  location:            git://github.com/monadfix/microlens.git

library
  exposed-modules:     Lens.Micro.GHC
                       Lens.Micro.GHC.Internal
  -- other-modules:
  -- other-extensions:
  build-depends:       array >=0.3.0.2 && <0.6
                     , base >=4.5 && <5
                     , bytestring >=0.9.2.1 && <0.12
                     , containers >=0.4.0 && <0.7
                     , microlens ==0.4.13.*
                     , transformers >=0.2 && <0.7

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010
