name:                microlens-mtl
version:             0.1.3.1
synopsis:            microlens support for Reader/Writer/State from mtl
description:
  This package contains functions (like 'view' or '+=') which work on 'MonadReader', 'MonadWriter', and 'MonadState' from the mtl package.
  .
  This package is a part of the <http://hackage.haskell.org/package/microlens microlens> family; see the readme <https://github.com/aelve/microlens#readme on Github>.
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          Artyom <yom@artyom.me>
homepage:            http://github.com/aelve/microlens
bug-reports:         http://github.com/aelve/microlens/issues
-- copyright:           
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/microlens.git

library
  exposed-modules:     Lens.Micro.Mtl
  other-modules:       Lens.Micro.Mtl.Zoom
  -- other-extensions:    
  build-depends:       base >=4.5 && <5
                     , microlens ==0.2.*
                     , mtl >=2.0.1 && <2.3
                     , transformers >=0.2 && <0.5
                     , transformers-compat >=0.4 && <1

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010