name:                microlens-mtl
version:             0.2.0.2
synopsis:            microlens support for Reader/Writer/State from mtl
description:
  This package contains functions (like 'view' or '+=') which work on 'MonadReader', 'MonadWriter', and 'MonadState' from the mtl package.
  .
  This package is a part of the <http://hackage.haskell.org/package/microlens microlens> family; see the readme <https://github.com/monadfix/microlens#readme on Github>.
license:             BSD3
license-file:        LICENSE
author:              Edward Kmett, Artyom Kazak
maintainer:          Monadfix <hi@monadfix.com>
homepage:            http://github.com/monadfix/microlens
bug-reports:         http://github.com/monadfix/microlens/issues
-- copyright:
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC==7.6.3
                     GHC==7.8.4
                     GHC==7.10.3
                     GHC==8.0.2
                     GHC==8.2.2
                     GHC==8.4.4
                     GHC==8.6.5
                     GHC==8.8.4
                     GHC==8.10.7
                     GHC==9.0.1
                     GHC==9.2.1

source-repository head
  type:                git
  location:            git://github.com/monadfix/microlens.git

library
  exposed-modules:     Lens.Micro.Mtl
                       Lens.Micro.Mtl.Internal
  -- other-extensions:
  build-depends:       base >=4.5 && <5
                     , microlens >=0.4 && <0.5
                     , mtl >=2.0.1 && <2.4
                     , transformers >=0.2 && <0.7
                     , transformers-compat >=0.4 && <1

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010
