name:                microlens-platform
version:             0.3.5.0
synopsis:            Feature-complete microlens
description:
  This package exports a module which is the recommended starting point for using <http://hackage.haskell.org/package/microlens microlens> if you aren't trying to keep your dependencies minimal. By importing @Lens.Micro.Platform@ you get all functions and instances from <http://hackage.haskell.org/package/microlens microlens>, <http://hackage.haskell.org/package/microlens-th microlens-th>, <http://hackage.haskell.org/package/microlens-mtl microlens-mtl>, <http://hackage.haskell.org/package/microlens-ghc microlens-ghc>, as well as instances for @Vector@, @Text@, and @HashMap@.
  .
  The minor and major versions of microlens-platform are incremented whenever the minor and major versions of any other microlens package are incremented, so you can depend on the exact version of microlens-platform without specifying the version of microlens (microlens-mtl, etc) you need.
  .
  This package is a part of the <http://hackage.haskell.org/package/microlens microlens> family; see the readme <https://github.com/aelve/microlens#readme on Github>.
license:             BSD3
license-file:        LICENSE
author:              Edward Kmett, Artyom
maintainer:          Artyom <yom@artyom.me>
homepage:            http://github.com/aelve/microlens
bug-reports:         http://github.com/aelve/microlens/issues
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/microlens.git

library
  exposed-modules:     Lens.Micro.Platform
                       Lens.Micro.Platform.Internal
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.5 && <5
                     , hashable >=1.1.2.3 && <1.3
                     , microlens ==0.4.6.*
                     , microlens-ghc ==0.4.6.*
                     , microlens-mtl ==0.1.10.*
                     , microlens-th ==0.4.0.*
                     , text >=0.11 && <1.3
                     , unordered-containers >=0.2.4 && <0.3
                     , vector >=0.9 && <0.12

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010