name:                microlens-platform
version:             0.4.3.1
synopsis:            microlens + all batteries included (best for apps)
description:
  This package exports a module which is the recommended starting point for using <http://hackage.haskell.org/package/microlens microlens> if you aren't trying to keep your dependencies minimal. By importing @Lens.Micro.Platform@ you get all functions and instances from <http://hackage.haskell.org/package/microlens microlens>, <http://hackage.haskell.org/package/microlens-th microlens-th>, <http://hackage.haskell.org/package/microlens-mtl microlens-mtl>, <http://hackage.haskell.org/package/microlens-ghc microlens-ghc>, as well as instances for @Vector@, @Text@, and @HashMap@.
  .
  The minor and major versions of microlens-platform are incremented whenever the minor and major versions of any other microlens package are incremented, so you can depend on the exact version of microlens-platform without specifying the version of microlens (microlens-mtl, etc) you need.
  .
  This package is a part of the <http://hackage.haskell.org/package/microlens microlens> family; see the readme <https://github.com/monadfix/microlens#readme on Github>.
license:             BSD3
license-file:        LICENSE
author:              Edward Kmett, Artyom Kazak
maintainer:          Steven Fontanella <steven.fontanella@gmail.com>
homepage:            http://github.com/monadfix/microlens
bug-reports:         http://github.com/monadfix/microlens/issues
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC==7.6.3
                     GHC==7.8.4
                     GHC==7.10.3
                     GHC==8.0.2
                     GHC==8.2.2
                     GHC==8.4.4
                     GHC==8.6.5
                     GHC==8.8.4
                     GHC==8.10.7
                     GHC==9.0.1
                     GHC==9.2.1

source-repository head
  type:                git
  location:            git://github.com/monadfix/microlens.git

library
  exposed-modules:     Lens.Micro.Platform
                       Lens.Micro.Platform.Internal
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.5 && <5
                     , hashable >=1.1.2.3 && <1.5
                     , microlens ==0.4.13.*
                     , microlens-ghc ==0.4.14.*
                     , microlens-mtl ==0.2.0.*
                     , microlens-th ==0.4.3.*
                     , text >=0.11 && <2.1
                     , unordered-containers >=0.2.4 && <0.3
                     , vector >=0.9 && <0.14

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010
