name:                microlens-pro
version:             0.1.0
synopsis:            Prisms and isomorphisms for microlens
description:
  This package provides @Prism@ and @Iso@ that are fully compatible with lens; the downside is that this package depends on profunctors, which in its turn depends on a lot of other packages (but still less than lens).
  .
  This package is a part of the <http://hackage.haskell.org/package/microlens microlens> family; see the readme <https://github.com/monadfix/microlens#readme on Github>.
license:             BSD3
license-file:        LICENSE
author:              Edward Kmett, Artyom Kazak
maintainer:          Monadfix <hi@monadfix.io>
homepage:            http://github.com/monadfix/microlens
bug-reports:         http://github.com/monadfix/microlens/issues
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/monadfix/microlens.git

library
  exposed-modules:     Lens.Micro.Pro
                       Lens.Micro.Pro.TH
                       Lens.Micro.Pro.Internal
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.5 && <5
                     , containers >=0.4.0 && <0.7
                     , microlens >=0.4.11.3 && <0.5
                     , microlens-th >=0.4.3.3 && <0.5
                     , profunctors >=5.2.1 && <6
                     , tagged >=0.4.4 && <1
                     , template-haskell >=2.7 && <2.15
                     , th-abstraction >=0.2.1 && <0.3

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010
