name:                   microlens-pro
version:                0.1.0
synopsis:               Prisms and isomorphisms for microlens
description:
  This package provides lens-compatible 'Prism' and 'Iso'. Consequently, it
  depends on the rather heavy @profunctors@.
  .
  Thank you to the <https://hackage.haskell.org/package/lens lens> contributors
  for the original code and some docs,
  <https://cohomolo.gy Emily Pillmore> and
  <https://mroman42.github.io/cosmoi Mario Román> for
  <https://golem.ph.utexas.edu/category/2020/01/profunctor_optics_the_categori.html this post>
  which inspired documentation, and Wikibooks contributors for
  <https://en.wikibooks.org/wiki/Haskell/Lenses_and_functional_references#Isos this article>.
  .
  This package is a part of the
  <https://hackage.haskell.org/package/microlens microlens> family; see the
  readme <https://github.com/crumbtoo/microlens on Github>.
license:                BSD3
license-file:           LICENSE
author:                 Edward Kmett, Artyom Kazak
maintainer:             crumbtoo <lomiskiam@gmail.com>
homepage:               http://github.com/crumbtoo/microlens
bug-reports:            http://github.com/crumbtoo/microlens/issues
category:               Data, Lenses
build-type:             Simple
extra-source-files:     CHANGELOG.md
cabal-version:          >=1.10

-- TODO: verify compatibility with earlier GHCs
tested-with:            GHC==9.8.1
                        GHC==9.6.2

source-repository head
  type:                 git
  location:             git://github.com/crumbtoo/microlens.git

library
  exposed-modules:      Lens.Micro.Pro
                        Lens.Micro.ProCompat
                        Lens.Micro.Pro.TH
                        Lens.Micro.Pro.Internal
                        Lens.Micro.Pro.Type

  -- other-modules:
  -- other-extensions:
  build-depends:          base >=4.5 && <5
                        , containers >=0.4.0 && <0.8
                        , unordered-containers >=0.2.4 && <0.3
                        , microlens >=0.4.11.3 && <0.5
                        , microlens-th >=0.4.3.3 && <0.5
                        , microlens-contra >=0.1.0 && <0.2
                        , microlens-platform >=0.4.3 && <0.5
                        , profunctors >=5.2.1 && <6
                        , tagged >=0.4.4 && <1
                        , template-haskell >=2.7 && <2.22
                        , th-abstraction >=0.6.0 && <0.7
                        , mtl >=2.3.1 && <2.4
                        , text >=2.0.2 && < 2.1
                        , vector >=0.13.1 && <0.14

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10
    -Wno-orphans

  hs-source-dirs:      src
  default-language:    GHC2021

