name:                   microlens-pro
version:                0.2.0.2
synopsis:               Prisms and isomorphisms for microlens
description:
  This package provides lens-compatible 'Prism' and 'Iso'. Consequently, it
  depends on the rather heavy @profunctors@.
  .
  Thank you to the <https://hackage.haskell.org/package/lens lens> contributors
  for the original code and some docs,
  Emily Pillmore (<https://cohomolo.gy link>) and
  Mario Rom&#225;n (<https://mroman42.github.io/cosmoi link>) for
  <https://golem.ph.utexas.edu/category/2020/01/profunctor_optics_the_categori.html this post>
  which inspired documentation, and Wikibooks contributors for
  <https://en.wikibooks.org/wiki/Haskell/Lenses_and_functional_references#Isos this article>.
  .
  This package is a part of the
  <https://hackage.haskell.org/package/microlens microlens> family; see the
  readme <https://github.com/stevenfontanella/microlens on Github>.
license:                BSD3
license-file:           LICENSE
author:                 Edward Kmett, Artyom Kazak, crumbtoo <lomiskiam@gmail.com>
maintainer:             Steven Fontanella <steven.fontanella@gmail.com>
homepage:               http://github.com/stevenfontanella/microlens
bug-reports:            http://github.com/stevenfontanella/microlens/issues
category:               Data, Lenses
build-type:             Simple
extra-source-files:     CHANGELOG.md
cabal-version:          >=1.10

tested-with:
                     GHC==9.12.1
                     GHC==9.10.1
                     GHC==9.8.4
                     GHC==9.6.6
                     GHC==9.4.8
                     GHC==9.2.8
                     GHC==9.0.2
                     GHC==8.10.7
                     GHC==8.8.4
                     GHC==8.6.5
                     GHC==8.4.4
                     GHC==8.2.2
                     GHC==8.0.2

source-repository head
  type:                 git
  location:             git://github.com/stevenfontanella/microlens.git

library
  exposed-modules:      Lens.Micro.Pro
                        Lens.Micro.Pro.TH
                        Lens.Micro.Pro.Internal
                        Lens.Micro.Pro.Type

  -- other-modules:
  -- other-extensions:
  build-depends:          base >=4.5 && <5
                        , containers >=0.4.0 && <0.8
                        , unordered-containers >=0.2.4 && <0.3
                        , microlens >=0.4.11.3 && <0.5
                        , microlens-th >=0.4.3.3 && <0.5
                        , microlens-contra >=0.1.0 && <0.2
                        , microlens-platform >=0.4.3 && <0.5
                        , profunctors >=5.2.1 && <6
                        , tagged >=0.4.4 && <1
                        , template-haskell >=2.7 && <2.24
                        , th-abstraction >=0.6.0 && <0.8
                        , mtl >=2.2.2 && <2.4
                        , text >=1.2 && <2.2
                        , vector >=0.12.0 && <0.14
  default-extensions:
    RankNTypes
    PolyKinds
    KindSignatures
    FlexibleInstances

  if impl(ghc <= 8.6.5)
    build-depends:      contravariant >=0.1.0 && <1.5.6

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10
  if impl(ghc >= 8.6.5)
    ghc-options:
      -Wno-orphans

  hs-source-dirs:      src
  default-language:    Haskell2010
