name:                microlens
version:             0.4.2.0
synopsis:            A tiny part of the lens library with no dependencies
description:
  This is an extract from <http://hackage.haskell.org/package/lens lens> (with no dependencies). It's not a toy lenses library, unsuitable for “real world”, but merely a small one. It is compatible with lens, and should have same performance. It also has better documentation.
  .
  Use this library:
  .
    * if you want to define lenses or traversals in your own library, but don't want to depend on lens
  .
    * if you are new to lenses and want a small library to play with, but don't want to use something “inferior” or have to relearn things when/if you switch to lens
  .
  Don't use this library:
  .
    * if you need @Iso@s, @Prism@s, indexed traversals, or actually anything else which isn't defined here
  .
    * if you want a library with a clean, understandable implementation (in which case you're looking for <http://hackage.haskell.org/package/lens-simple lens-simple>)
  .
  If you're writing an application which uses lenses more extensively, look at <http://hackage.haskell.org/package/microlens-platform microlens-platform> – it combines features of most other microlens packages (<http://hackage.haskell.org/package/microlens-mtl microlens-mtl>, <http://hackage.haskell.org/package/microlens-th microlens-th>, <http://hackage.haskell.org/package/microlens-ghc microlens-ghc>).
  .
  If you want to export getters or folds and don't mind the <http://hackage.haskell.org/package/contravariant contravariant> dependency, please consider using <http://hackage.haskell.org/package/microlens-contra microlens-contra>.
  .
  There's a longer readme <https://github.com/aelve/microlens#readme on Github>, you should read it if you're interested about using this library.
  .
  If you haven't ever used lenses before, read <http://hackage.haskell.org/package/lens-tutorial/docs/Control-Lens-Tutorial.html this tutorial>. (It's for lens, but it applies to microlens just as well.)
  .
  Note that microlens has /no/ dependencies starting from GHC 7.10 (base-4.8). Prior to that, it has to depend on transformers-0.2 or above.
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          Artyom <yom@artyom.me>
homepage:            http://github.com/aelve/microlens
bug-reports:         http://github.com/aelve/microlens/issues
-- copyright:           
category:            Data, Lenses
build-type:          Simple
extra-source-files:
  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/microlens.git

library
  exposed-modules:     Lens.Micro
                       Lens.Micro.Extras
                       Lens.Micro.Internal
                       Lens.Micro.Type
  -- other-modules:       
  -- other-extensions:    

  -- Since base-4.8 we get the Identity functor in base, so we can avoid a
  -- transformers dependency.
  if impl(ghc>=7.9)
    build-depends:     base >=4.8 && <5
  if !impl(ghc>=7.9)
    build-depends:     base >=4.5 && <5
                     , transformers >=0.2

  ghc-options:
    -Wall -fwarn-tabs
    -O2 -fdicts-cheap -funbox-strict-fields
    -fmax-simplifier-iterations=10

  hs-source-dirs:      src
  default-language:    Haskell2010
